modify typography and button

--- a/sass/1_abstracts/_variables.scss
+++ b/sass/1_abstracts/_variables.scss
@@ -6,8 +6,8 @@ $border-radius-round:   50%;
 $btn-bg:            linear-gradient(to bottom right, $secondary, $primary);
 $btn-bg-hover:      linear-gradient(to bottom right, lighten($secondary, 5), lighten($primary, 5));
 $btn-border:        none;
-$btn-margin:        30px 0;
-$btn-padding:       1.3em 2em;
+$btn-padding:       1em 1.5em;
+$btn-font-size:     .9rem;
 $btn-shadow:        0 5px 8px rgba(0, 0, 0, .2);
 $btn-shadow-hover:  0 5px 8px rgba(0, 0, 0, .5);
 $btn-width:         13em;
