--- a/css/main.css
+++ b/css/main.css
@@ -101,22 +101,44 @@ body {
   font-family: "Shrikhand", cursive;
 }
 .home h1 {
-  font-size: 1.5rem;
+  font-size: 1.54rem;
 }
 .home h2 {
-  font-size: 1.4rem;
+  font-size: 1.54rem;
 }
-.home h3 {
-  font-size: 1.08rem;
-}
-.home h4 {
-  font-size: 1.2rem;
+.home h1,
+.home h2 {
+  font-weight: 700;
 }
 
-h2.menu-catagory__title {
-  font-size: 1.4rem;
+.menu h1,
+.menu h4 {
+  font-family: "Shrikhand", cursive;
+}
+.menu h2,
+.menu h3,
+.menu p {
+  font-family: "Roboto", sans-serif;
+}
+.menu h1 {
+  font-size: 1.72rem;
+}
+.menu h2 {
+  font-size: 1.05rem;
   font-weight: 300;
   text-transform: uppercase;
+}
+
+h3 {
+  font-weight: 700;
+}
+
+h3 {
+  font-size: 1.18rem;
+}
+
+h4 {
+  font-size: 1.18rem;
 }
 
 .header {
@@ -266,13 +288,14 @@ h2.menu-catagory__title {
 }
 .top-banner__button {
   width: auto;
-  padding: 1.3em 2em;
+  padding: 1em 1.5em;
   border: none;
   border-radius: 2rem;
   box-shadow: 0 5px 8px rgba(0, 0, 0, 0.2);
   background-image: linear-gradient(to bottom right, #FF79DA, #9356DC);
   color: #fff;
-  font-weight: 700;
+  font-size: 0.9rem;
+  font-weight: 500;
   cursor: pointer;
 }
 .top-banner__button:hover {
@@ -378,14 +401,15 @@ h2.menu-catagory__title {
 }
 
 .button {
-  width: 13em;
-  padding: 1.3em 2em;
+  width: 10em;
+  padding: 1em 1.5em;
   border: none;
   border-radius: 2rem;
   box-shadow: 0 5px 8px rgba(0, 0, 0, 0.2);
   background-image: linear-gradient(to bottom right, #FF79DA, #9356DC);
   color: #fff;
-  font-weight: 700;
+  font-size: 0.9rem;
+  font-weight: 500;
   cursor: pointer;
 }
 .button:hover {
