--- a/sass/5_pages/_home.scss
+++ b/sass/5_pages/_home.scss
@@ -1,3 +1,14 @@
+.home {
+    h1 {
+        font-size: $h2-font-size;
+        font-weight: $xbold;
+    }
+    h2 {
+        @extend %font-weight-bold;
+        font-size: $h2-font-size;
+    }
+}
+
 .search-box {
     @include flex(row);
     @include box-shadow(inset);
@@ -32,6 +43,7 @@
         margin-bottom: 2em;
         color: $text-accent;
         text-align: center;
+        font-weight: $light;
     }
 
     &__button {
@@ -64,12 +76,12 @@
     }
 
     &__icon {
-        margin: 0 20px;
+        margin: 0 15px 0 6px;
         color: $text-icon;
     }
 
     &__descr {
-        font-weight: bold;
+        @extend %font-weight-bold;
     }
 }
 
