--- a/sass/2_base/_typography.scss
+++ b/sass/2_base/_typography.scss
@@ -2,65 +2,39 @@ $font-family-base:      'Roboto', sans-serif;
 $font-family-cursive:   'Shrikhand', cursive;
 
 $font-size-base: 17px;
+$h1-font-size: 1.72rem;
+$h2-font-size: 1.54rem;
+$h3-font-size: 1.18rem;
+$h4-font-size: 1.18rem;
 
 $light:    300;
 $normal:   400;
 $medium:   500;
 $bold:     700;
+$xbold:    900;
 
 body {
-    font-size: $font-size-base;
+    font-size:      $font-size-base;
+    font-family:    $font-family-base;
+    font-weight:    $normal;
 }
 
-.home {
-    h1,
-    h2,
-    h3,
-    p,
-    ::after {
-        font-family: $font-family-base;
-    }
-    h4 {
-        font-family: $font-family-cursive;
-    }
-    h1 {
-        font-size: 1.54rem;
-    }
-    h2 {
-        font-size: 1.54rem;
-    }
-
-    h1,
-    h2 {
-        font-weight: $bold;
-    }
-}
-.menu {
-    h1,
-    h4 {
-        font-family: $font-family-cursive;
-    }
-    h2,
-    h3,
-    p {
-        font-family: $font-family-base;
-    }
-    h1 {
-        font-size: 1.72rem;
-    }
-    h2 {
-        font-size: 1.05rem;
-        font-weight: $light;
-        text-transform: uppercase;
-    }
+@mixin font-size-customized ($size) {
+    font-size: 1em * $size;
 }
 
-h3 {
+.font-weight-bold {
     font-weight: $bold;
 }
-h3 {
-    font-size: 1.18rem;
+
+.font-weight-light {
+    font-weight: $light;
 }
-h4 {
-    font-size: 1.18rem;
+
+.text-uppercase {
+    text-transform: uppercase;
+}
+
+.text-cursive {
+    font-family: $font-family-cursive;
 }
