--- a/sass/3_layout/_footer.scss
+++ b/sass/3_layout/_footer.scss
@@ -4,6 +4,7 @@
     background-color: $bg-footer;
     
     h4 {
+        font-size: $h4-font-size;
         color: text-color($bg-footer);
     }
 
