--- a/sass/5_pages/_home.scss
+++ b/sass/5_pages/_home.scss
@@ -1,3 +1,13 @@
+.home {
+    h1 {
+        font-size: $h2-font-size;
+        font-weight: $xbold;
+    }
+    h2 {
+        @extend h1;
+    }
+}
+
 .search-box {
     @include flex(row);
     @include box-shadow(inset);
@@ -32,6 +42,7 @@
         margin-bottom: 2em;
         color: $text-accent;
         text-align: center;
+        font-weight: $light;
     }
 
     &__button {
@@ -69,7 +80,7 @@
     }
 
     &__descr {
-        font-weight: bold;
+        @extend .font-weight-bold;
     }
 }
 
