--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@ pre,
 iframe,
 hr,
 h1,
+.home h2,
 h2,
 h3,
 h4,
@@ -26,7 +27,7 @@ h6 {
   padding: 0;
 }
 
-h1,
+h1, .home h2,
 h2,
 h3,
 h4,
@@ -88,57 +89,24 @@ a:active {
 
 body {
   font-size: 17px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
 }
 
-.home h1,
-.home h2,
-.home h3,
-.home p,
-.home ::after {
-  font-family: "Roboto", sans-serif;
-}
-.home h4 {
-  font-family: "Shrikhand", cursive;
-}
-.home h1 {
-  font-size: 1.54rem;
-}
-.home h2 {
-  font-size: 1.54rem;
-}
-.home h1,
-.home h2 {
+.font-weight-bold, .step__descr {
   font-weight: 700;
 }
 
-.menu h1,
-.menu h4 {
-  font-family: "Shrikhand", cursive;
-}
-.menu h2,
-.menu h3,
-.menu p {
-  font-family: "Roboto", sans-serif;
-}
-.menu h1 {
-  font-size: 1.72rem;
-}
-.menu h2 {
-  font-size: 1.05rem;
+.font-weight-light {
   font-weight: 300;
+}
+
+.text-uppercase {
   text-transform: uppercase;
 }
 
-h3 {
-  font-weight: 700;
-}
-
-h3 {
-  font-size: 1.18rem;
-}
-
-h4 {
-  font-size: 1.18rem;
+.text-cursive {
+  font-family: "Shrikhand", cursive;
 }
 
 .header {
@@ -168,6 +136,7 @@ h4 {
   background-color: #333333;
 }
 .footer h4 {
+  font-size: 1.18rem;
   color: #fff;
 }
 .footer a {
@@ -208,6 +177,8 @@ h4 {
 }
 .card__title {
   margin-bottom: 0.2rem;
+  font-size: 1.18rem;
+  font-weight: 700;
 }
 .card__descr {
   font-weight: 300;
@@ -248,6 +219,10 @@ h4 {
   font-weight: 300;
 }
 
+.home h1, .home h2 {
+  font-size: 1.54rem;
+  font-weight: 900;
+}
 .search-box {
   display: flex;
   flex-direction: row;
@@ -285,6 +260,7 @@ h4 {
   margin-bottom: 2em;
   color: #333333;
   text-align: center;
+  font-weight: 300;
 }
 .top-banner__button {
   width: auto;
@@ -330,10 +306,6 @@ h4 {
   margin: 0 20px;
   color: gray;
 }
-.step__descr {
-  font-weight: bold;
-}
-
 .step--active {
   background-color: #f2eafb;
 }
