--- a/sass/4_components/_cards.scss
+++ b/sass/4_components/_cards.scss
@@ -27,20 +27,20 @@
     &__descr {
         font-weight: $light;
     }
+}
 
-    &::after {
-        content: attr(title);
-        display: block;
-        position: absolute;
-        right: 10px;
-        top: 10px;
-        padding: .4em .7em;
-        border-radius: $border-radius-sm;
-        background-color: $accent;
-        color: darken($accent, 40);
-        font-size: .8rem;
-        font-weight: bold;
-    }
+[title]::after {
+    content: attr(title);
+    display: block;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    padding: .4em .7em;
+    border-radius: $border-radius-sm;
+    background-color: $accent;
+    color: darken($accent, 40);
+    font-size: .8rem;
+    font-weight: bold;
 }
 
 .favorite {
