use [title] to prevent blank color blocks showing up in unwanted cards

--- a/css/main.css
+++ b/css/main.css
@@ -183,7 +183,8 @@ body {
 .card__descr {
   font-weight: 300;
 }
-.card::after {
+
+[title]::after {
   content: attr(title);
   display: block;
   position: absolute;
