--- a/css/main.css
+++ b/css/main.css
@@ -1,404 +1,18 @@
-/*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
-html,
-body,
-p,
-ol,
-ul,
-li,
-dl,
-dt,
-dd,
-blockquote,
-figure,
-fieldset,
-legend,
-textarea,
-pre,
-iframe,
-hr,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
-  padding: 0;
-}
+/* Error: Undefined variable.
+ *   ,
+ * 6 | $btn-bg:            linear-gradient(to bottom right, $secondary, $primary);
+ *   |                                                      ^^^^^^^^^^
+ *   '
+ *   sass\1_abstracts\_variables.scss 6:54  @import
+ *   sass\main.scss 1:9                     root stylesheet */
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-size: 100%;
-  font-weight: normal;
-}
-
-ul {
-  list-style: none;
-}
-
-button,
-input,
-select {
-  margin: 0;
-}
-
-html {
-  box-sizing: border-box;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
-img,
-video {
-  height: auto;
-  max-width: 100%;
-}
-
-iframe {
-  border: 0;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-td,
-th {
-  padding: 0;
-}
-
-a,
-a:link,
-a:visited,
-a:focus,
-a:hover,
-a:active {
-  color: black;
-  text-decoration: none;
-}
-
-body {
-  font-size: 17px;
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-}
-
-.step__descr, .home h2, .dish__title, .footer__link:nth-child(1), .footer__link:nth-child(2) {
-  font-weight: 700;
-}
-
-.menu-catagory__title {
-  font-weight: 300;
-}
-
-.menu-catagory__title {
-  text-transform: uppercase;
-}
-
-.menu h1, .footer h4 {
-  font-family: "Shrikhand", cursive;
-}
-
-.header {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.header__button {
-  position: absolute;
-  left: 25px;
-  top: 25px;
-  font-size: 1.2em;
-}
-
-.header-logo {
-  width: 200px;
-  padding: 20px;
-}
-
-.footer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: left;
-  padding: 20px;
-  background-color: #333333;
-}
-.footer h4 {
-  font-size: 1.18rem;
-  color: #fff;
-}
-.footer a {
-  text-decoration: none;
-  color: #fff;
-}
-.footer__title {
-  margin-bottom: 0.5em;
-}
-.footer__link {
-  display: flex;
-  flex-direction: row;
-  justify-content: left;
-  align-items: center;
-  font-size: smaller;
-  margin: 0.3em 0;
-}
-.footer__icon {
-  margin-right: 1em;
-}
-
-.card {
-  box-shadow: 0 5px 8px rgba(0, 0, 0, 0.1);
-  position: relative;
-  margin: 2rem 0;
-  border-radius: 1rem;
-  background-color: #fff;
-}
-.card__img {
-  width: 100%;
-  height: 170px;
-  object-fit: cover;
-  object-position: 50% 60%;
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-}
-.card__content {
-  padding: 1rem;
-}
-.card__title {
-  margin-bottom: 0.2rem;
-  font-size: 1.18rem;
-  font-weight: 700;
-}
-.card__descr {
-  font-weight: 300;
-}
-
-[title]::after {
-  content: attr(title);
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
   display: block;
-  position: absolute;
-  right: 10px;
-  top: 10px;
-  padding: 0.4em 0.7em;
-  border-radius: 0.2rem;
-  background-color: #99E2D0;
-  color: #278870;
-  font-size: 0.8rem;
-  font-weight: bold;
-}
-
-.favorite {
-  position: absolute;
-  bottom: 30px;
-  right: 20px;
-  font-size: 1.2em;
-}
-.favorite--active {
-  background-image: linear-gradient(#9356DC, #FF79DA);
-}
-
-.dish {
-  box-shadow: 0 5px 8px rgba(0, 0, 0, 0.1);
-  width: 90vw;
-  margin: 20px 0;
-  padding: 10px;
-  border-radius: 1rem;
-  background-color: white;
-}
-.dish__descr {
-  font-weight: 300;
-}
-
-.home h1 {
-  font-size: 1.54rem;
-  font-weight: 900;
-}
-.home h2 {
-  font-size: 1.54rem;
-}
-
-.search-box {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  box-shadow: inset 0 7px 9px -7px rgba(0, 0, 0, 0.8);
-  height: 50px;
-  background-color: #d9d9d9;
-  color: #333333;
-}
-.search-box__icon {
-  padding: 10px;
-  color: #333333;
-}
-.search-box__input {
-  font-weight: 500;
-}
-
-.top-banner {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 300px;
-  padding: 20px;
-  background-color: #f2f2f2;
-  color: #000;
-  text-align: center;
-}
-.top-banner__title {
-  width: 250px;
+  padding: 1em;
   margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Undefined variable.\a   \2577 \a 6 \2502  $btn-bg:            linear-gradient(to bottom right, $secondary, $primary);\d\a   \2502                                                       ^^^^^^^^^^\a   \2575 \a   sass\\1_abstracts\\_variables.scss 6:54  @import\a   sass\\main.scss 1:9                     root stylesheet";
 }
-.top-banner__descr {
-  margin-bottom: 2em;
-  color: #333333;
-  text-align: center;
-  font-weight: 300;
-}
-.top-banner__button {
-  width: auto;
-  padding: 1em 1.5em;
-  border: none;
-  border-radius: 2rem;
-  box-shadow: 0 5px 8px rgba(0, 0, 0, 0.2);
-  background-image: linear-gradient(to bottom right, #FF79DA, #9356DC);
-  color: #fff;
-  font-size: 0.9rem;
-  font-weight: 500;
-  cursor: pointer;
-}
-.top-banner__button:hover {
-  box-shadow: 0 5px 8px rgba(0, 0, 0, 0.5);
-  background-image: linear-gradient(to bottom right, #ff93e1, #a16be0);
-}
-
-.steps, .restaurants {
-  padding: 30px 20px;
-}
-
-.step {
-  display: flex;
-  flex-direction: row;
-  justify-content: justify;
-  align-items: center;
-  box-shadow: 0 5px 8px rgba(0, 0, 0, 0.1);
-  margin: 20px 0 20px 10px;
-  padding: 1.5em 0;
-  border-radius: 1rem;
-  background-color: #f2f2f2;
-}
-.step__num {
-  position: relative;
-  right: 10px;
-  padding: 2px 7px;
-  border-radius: 50%;
-  background-color: #9356DC;
-  color: #fff;
-}
-.step__icon {
-  margin: 0 15px 0 6px;
-  color: gray;
-}
-.step--active {
-  background-color: #f2eafb;
-}
-.step--active__icon {
-  color: #9356DC;
-}
-
-.restaurants {
-  background-color: #f2f2f2;
-}
-
-.section-title {
-  margin-top: 20px;
-}
-
-.menu h1 {
-  font-size: 1.72rem;
-}
-.menu h2 {
-  font-size: 1.0549rem;
-}
-.menu__content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: -40px;
-  padding: 35px 20px 75px 20px;
-  border-top-left-radius: 2rem;
-  border-top-right-radius: 2rem;
-  background-color: #f2f2f2;
-}
-.menu__wrapper {
-  background-color: #f2f2f2;
-}
-
-.menu-photo {
-  z-index: -1;
-}
-
-.title-wrapper {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 1.5em;
-}
-
-.menu-title {
-  margin-bottom: 0;
-}
-
-.menu-catagory {
-  margin: 2em 0;
-}
-.menu-catagory__title {
-  position: relative;
-}
-.menu-catagory__title::after {
-  content: "";
-  display: block;
-  position: absolute;
-  bottom: -7px;
-  width: 40px;
-  height: 3px;
-  background: #99E2D0;
-}
-
-.fa-heart {
-  margin-right: 10px;
-  font-size: 1.5rem;
-}
-
-.button {
-  width: 11em;
-  padding: 1em 1.5em;
-  border: none;
-  border-radius: 2rem;
-  box-shadow: 0 5px 8px rgba(0, 0, 0, 0.2);
-  background-image: linear-gradient(to bottom right, #FF79DA, #9356DC);
-  color: #fff;
-  font-size: 0.9rem;
-  font-weight: 500;
-  cursor: pointer;
-}
-.button:hover {
-  box-shadow: 0 5px 8px rgba(0, 0, 0, 0.5);
-  background-image: linear-gradient(to bottom right, #ff93e1, #a16be0);
-}
-
-/*# sourceMappingURL=main.css.map */
