--- a/sass/5_pages/_home.scss
+++ b/sass/5_pages/_home.scss
@@ -7,6 +7,13 @@
         @extend %font-weight-bold;
         font-size: $h2-font-size;
     }
+    .favorite {
+        @include favorite;
+        position: absolute;
+        bottom: 30px;
+        right: 20px;
+        font-size: 1.2em;
+    }
 }
 
 .search-box {
