--- a/sass/5_pages/_menu.scss
+++ b/sass/5_pages/_menu.scss
@@ -19,6 +19,12 @@
     &__wrapper {
         background-color: $bg-secondary;
     }
+
+    .favorite {
+        @include favorite (1px);
+        margin-right: 10px;
+        font-size: 1.5rem;
+    }
 }
 
 .menu-photo {
@@ -54,10 +60,8 @@
     }
 }
 
-.fa-heart {
-    margin-right: 10px;
-    font-size: 1.5rem;
-}
+
+
 
 .button {
     @include button($width: 11em);
