--- a/sass/4_components/_buttons.scss
+++ b/sass/4_components/_buttons.scss
@@ -15,3 +15,19 @@
         background-image:   $btn-bg-hover;    
     }
 }
+
+@mixin favorite {
+    -webkit-text-stroke: 1px black;
+    color: transparent;
+    transform: scale(1);
+    
+    &:hover, &--active {
+        background-image: linear-gradient($primary, $secondary);
+        color: transparent;
+        -webkit-text-stroke: 0;
+        -webkit-background-clip: text;
+        background-clip: text;
+        transform: scale(1.1);
+        transition: 200ms ease-in-out;
+    }
+}
