--- a/css/main.css
+++ b/css/main.css
@@ -218,19 +218,22 @@ body {
   font-size: 1.54rem;
 }
 .home .favorite {
-  -webkit-text-stroke: 0.5px black;
+  -webkit-text-stroke: 1px black;
   color: transparent;
+  transform: scale(1);
   position: absolute;
   bottom: 30px;
   right: 20px;
   font-size: 1.2em;
 }
-.home .favorite:hover, .home .favorite --active {
+.home .favorite:hover, .home .favorite--active {
   background-image: linear-gradient(#9356DC, #FF79DA);
   color: transparent;
+  -webkit-text-stroke: 0;
   -webkit-background-clip: text;
   background-clip: text;
-  -webkit-text-stroke: 0;
+  transform: scale(1.1);
+  transition: 200ms ease-in-out;
 }
 
 .search-box {
@@ -354,15 +357,18 @@ body {
 .menu .favorite {
   -webkit-text-stroke: 1px black;
   color: transparent;
+  transform: scale(1);
   margin-right: 10px;
   font-size: 1.5rem;
 }
-.menu .favorite:hover, .menu .favorite --active {
+.menu .favorite:hover, .menu .favorite--active {
   background-image: linear-gradient(#9356DC, #FF79DA);
   color: transparent;
+  -webkit-text-stroke: 0;
   -webkit-background-clip: text;
   background-clip: text;
-  -webkit-text-stroke: 0;
+  transform: scale(1.1);
+  transition: 200ms ease-in-out;
 }
 
 .menu-photo {
