--- a/sass/4_components/_buttons.scss
+++ b/sass/4_components/_buttons.scss
@@ -16,15 +16,18 @@
     }
 }
 
-@mixin favorite ($stroke-width: .5px) {
-    -webkit-text-stroke: $stroke-width black;
+@mixin favorite {
+    -webkit-text-stroke: 1px black;
     color: transparent;
-
-    &:hover, --active {
+    transform: scale(1);
+    
+    &:hover, &--active {
         background-image: linear-gradient($primary, $secondary);
         color: transparent;
+        -webkit-text-stroke: 0;
         -webkit-background-clip: text;
         background-clip: text;
-        -webkit-text-stroke: 0;
+        transform: scale(1.1);
+        transition: 200ms ease-in-out;
     }
 }
