--- a/sass/5_pages/_menu.scss
+++ b/sass/5_pages/_menu.scss
@@ -21,7 +21,7 @@
     }
 
     .favorite {
-        @include favorite (1px);
+        @include favorite;
         margin-right: 10px;
         font-size: 1.5rem;
     }
@@ -59,9 +59,6 @@
           }
     }
 }
-
-
-
 
 .button {
     @include button($width: 11em);
