--- a/sass/5_pages/_home.scss
+++ b/sass/5_pages/_home.scss
@@ -17,7 +17,7 @@
 }
 
 .search-box {
-    @include flex(row);
+    @include flex(false);
     @include box-shadow(inset);
     height: 50px;
     background-color: $bg-accent;
@@ -52,13 +52,6 @@
         text-align: center;
         font-weight: $light;
     }
-
-    &__button {
-       @include button;
-       @include hover(){
-           @include button(hover);
-       };
-    }
 }
 
 .steps {
@@ -66,7 +59,7 @@
 }
 
 .step {
-    @include flex(row, justify, center);
+    @include flex(false, justify);
     @include box-shadow;
     margin: 20px 0 20px 10px;
     padding: 1.5em 0;
