--- a/sass/4_components/_cards.scss
+++ b/sass/4_components/_cards.scss
@@ -29,7 +29,8 @@
     }
 }
 
-[title]::after {
+.new {
+    @include box-shadow;
     content: attr(title);
     display: block;
     position: absolute;
