--- a/css/main.css
+++ b/css/main.css
@@ -181,6 +181,24 @@ h1 {
   background-image: linear-gradient(to bottom right, #ff93e1, #a16be0);
 }
 
+.fa-heart {
+  border: none;
+  background-color: transparent;
+  -webkit-text-stroke: 1px black;
+  color: transparent;
+  transform: scale(1);
+  cursor: pointer;
+}
+.fa-heart:hover, .fa-heart :active, .fa-heart--active {
+  background-image: linear-gradient(#9356DC, #FF79DA);
+  color: transparent;
+  -webkit-text-stroke: 0;
+  -webkit-background-clip: text;
+  background-clip: text;
+  transform: scale(1.1);
+  transition: 200ms ease-in-out;
+}
+
 .card {
   box-shadow: 0 5px 8px rgba(0, 0, 0, 0.1);
   position: relative;
@@ -208,7 +226,8 @@ h1 {
   font-weight: 300;
 }
 
-[title]::after {
+.new {
+  box-shadow: 0 5px 8px rgba(0, 0, 0, 0.1);
   content: attr(title);
   display: block;
   position: absolute;
@@ -241,23 +260,11 @@ h1 {
 .home h2 {
   font-size: 1.54rem;
 }
-.home .favorite {
-  -webkit-text-stroke: 1px black;
-  color: transparent;
-  transform: scale(1);
+.home .fa-heart {
   position: absolute;
-  bottom: 30px;
-  right: 20px;
+  bottom: 38px;
+  right: 25px;
   font-size: 1.2em;
-}
-.home .favorite:hover, .home .favorite :active, .home .favorite--active {
-  background-image: linear-gradient(#9356DC, #FF79DA);
-  color: transparent;
-  -webkit-text-stroke: 0;
-  -webkit-background-clip: text;
-  background-clip: text;
-  transform: scale(1.1);
-  transition: 200ms ease-in-out;
 }
 
 .search-box {
@@ -366,21 +373,9 @@ h1 {
   padding-left: 3em;
   padding-right: 3em;
 }
-.menu .favorite {
-  -webkit-text-stroke: 1px black;
-  color: transparent;
-  transform: scale(1);
+.menu .fa-heart {
   margin-right: 10px;
   font-size: 1.5rem;
-}
-.menu .favorite:hover, .menu .favorite :active, .menu .favorite--active {
-  background-image: linear-gradient(#9356DC, #FF79DA);
-  color: transparent;
-  -webkit-text-stroke: 0;
-  -webkit-background-clip: text;
-  background-clip: text;
-  transform: scale(1.1);
-  transition: 200ms ease-in-out;
 }
 
 .menu-photo {
@@ -388,7 +383,7 @@ h1 {
 }
 
 .title-wrapper {
-  flex-direction: column;
+  flex-direction: row;
   display: flex;
   justify-content: space-between;
   align-items: center;
