--- a/sass/5_pages/_menu.scss
+++ b/sass/5_pages/_menu.scss
@@ -25,8 +25,7 @@
         padding-right:  3em;
     }
 
-    .favorite {
-        @include favorite;
+    .fa-heart {
         margin-right: 10px;
         font-size: 1.5rem;
     }
@@ -37,9 +36,9 @@
 }
 
 .title-wrapper {
-    @include flex(row, space-between, center);
+    @include flex(false, space-between, center);
     margin-bottom: 1.5em;
-}
+} 
 
 .menu-title {
     margin-bottom: 0;
