--- a/sass/3_layout/_footer.scss
+++ b/sass/3_layout/_footer.scss
@@ -2,31 +2,21 @@
     @include flex(true, center, flex-start);
     padding: 20px;
     background-color: $bg-footer;
-    
-    h4 {
-        @extend %text-cursive;
-        font-size: $h4-font-size;
-        color: text-color($bg-footer);
-    }
 
     a {
-        text-decoration: none;
+        @include flex(false, flex-start, center);
+        margin: .5em 0;
         color: text-color($bg-footer);
-    }
-
-    &__title {
-        margin-bottom: .5em;
-    }
-
-    &__link {
+        font-size: .9em;
+        text-decoration: none;
+        
         &:nth-child(1), &:nth-child(2) {
             @extend %font-weight-bold;
         }
     }
-    &__link {
-        @include flex(false, flex-start, center);
-        font-size: smaller;
-        margin: .3em 0;
+
+    &__title {
+        margin-bottom: .5em;
     }
 
     &__icon {
