--- a/sass/5_pages/_home.scss
+++ b/sass/5_pages/_home.scss
@@ -1,12 +1,4 @@
 .home {
-    h1 {
-        font-size: $h2-font-size;
-        font-weight: $xbold;
-    }
-    h2 {
-        @extend %font-weight-bold;
-        font-size: $h2-font-size;
-    }
     .fa-heart {
         position: absolute;
         bottom: 38px;
@@ -34,22 +26,25 @@
 
 .top-banner {
     @include flex;
-    height: 300px;
-    padding: 20px;
+    height: 270px;
+    padding: 0 20px;
     background-color: $bg-secondary;
     color: text-color($bg-secondary);
     text-align: center;
 
     &__title {
-        width: 250px;
-        margin-bottom: 1em;
+        margin-bottom: .5em;
+        padding: 0 20px;
     }
 
     &__descr {
-        margin-bottom: 2em;
+        margin-bottom: 1.5em;
         color: $text-accent;
         text-align: center;
         font-weight: $light;
+    }
+    &__btn {
+        margin-bottom: 1em;
     }
 }
 
