--- a/css/main.css
+++ b/css/main.css
@@ -268,9 +268,9 @@ h4 {
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: inset 0 7px 9px -7px rgba(0, 0, 0, 0.8);
+  box-shadow: inset 0 7px 6px -7px rgba(0, 0, 0, 0.4);
   height: 50px;
-  background-color: #d9d9d9;
+  background-color: #e6e6e6;
   color: #333333;
 }
 .search-box__icon {
