--- a/sass/4_components/_cards.scss
+++ b/sass/4_components/_cards.scss
@@ -1,7 +1,7 @@
 .card {
     @include box-shadow;
     position: relative;
-    margin: $card-margin;
+    margin: 1.1rem 0;
     border-radius: $border-radius;
     background-color: $bg-primary;
 
@@ -15,11 +15,11 @@
     }
 
     &__content {
-        padding: $card-padding;
+        padding: 1rem;
     }
 
     &__title {
-        margin-bottom: $card-title-margin;
+        margin-bottom: .2rem;
         font-size: $h3-font-size;
         font-weight: $bold;
     }
