--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import '3_layout/header';
 @import '3_layout/footer';
 
+@import '4_components/spinner';
 @import '4_components/buttons';
 @import '4_components/cards';
 @import '4_components/dish';
