--- a/css/main.css
+++ b/css/main.css
@@ -168,6 +168,81 @@ h4 {
   margin-right: 1em;
 }
 
+.loader {
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #fff;
+}
+
+.loader {
+  animation-name: hide;
+  animation-delay: 5s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes hide {
+  to {
+    z-index: -1;
+    opacity: 0;
+  }
+}
+.spinner-primary {
+  z-index: 2;
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  border-top: #9356DC solid 2px;
+  border-right: #e4d5f6 solid 2px;
+  border-left: #e4d5f6 solid 2px;
+  border-bottom: #e4d5f6 solid 2px;
+  animation: spin 1000ms cubic-bezier(0.8, 0.8, 0.25, 0.94) 10 alternate;
+  transform: scale(1) rotate(0deg);
+}
+
+.spinner-secondary {
+  position: fixed;
+  top: -37px;
+  left: -37px;
+  z-index: 2;
+  height: 220px;
+  width: 220px;
+  border-radius: 50%;
+  border-top: #ffdff6 solid 2px;
+  border-right: #FF79DA solid 2px;
+  border-left: #ffdff6 solid 2px;
+  border-bottom: #ffdff6 solid 2px;
+  animation: spin 1000ms cubic-bezier(0.8, 0.8, 0.25, 0.94) 10 alternate;
+  transform: scale(0.8) rotate(0deg);
+}
+
+@keyframes spin {
+  to {
+    transform: scale(1.1) rotate(360deg);
+  }
+}
+.loading-text {
+  position: fixed;
+  top: 48.5vh;
+  font-family: "Shrikhand", cursive;
+  animation: fade 1000ms cubic-bezier(0.76, 0.79, 0.1, 0.98) 5 alternate;
+  transform: scale(1);
+  opacity: 0.3;
+}
+
+@keyframes fade {
+  to {
+    opacity: 0.7;
+    transform: scale(1.1);
+  }
+}
 .btn {
   padding: 1em;
   border: none;
@@ -256,6 +331,17 @@ h4 {
   font-weight: 300;
 }
 
+.home header, .home main, .home footer {
+  animation-name: display;
+  animation-delay: 5s;
+  animation-fill-mode: forwards;
+  visibility: hidden;
+}
+@keyframes display {
+  to {
+    visibility: visible;
+  }
+}
 .home .fa-heart {
   position: absolute;
   bottom: 38px;
