--- a/css/main.css
+++ b/css/main.css
@@ -194,53 +194,63 @@ h4 {
     opacity: 0;
   }
 }
-.spinner-primary {
+.spinner {
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.spinner-primary, .spinner-secondary {
+  position: absolute;
+  margin: 0 auto;
   z-index: 2;
-  height: 150px;
-  width: 150px;
   border-radius: 50%;
-  border-top: #9356DC solid 2px;
-  border-right: #e4d5f6 solid 2px;
-  border-left: #e4d5f6 solid 2px;
-  border-bottom: #e4d5f6 solid 2px;
-  animation: spin 1000ms cubic-bezier(0.8, 0.8, 0.25, 0.94) 10 alternate;
-  transform: scale(1) rotate(0deg);
+  transform: rotate3d(0, 0, 0, 180deg) scale(0.7);
+  animation: spin 1500ms 10 alternate;
+  opacity: 0.5;
+}
+
+.spinner-primary {
+  height: 190px;
+  width: 190px;
+  border: #9356DC 2px solid;
 }
 
 .spinner-secondary {
-  position: fixed;
-  top: -37px;
-  left: -37px;
-  z-index: 2;
-  height: 220px;
-  width: 220px;
-  border-radius: 50%;
-  border-top: #ffdff6 solid 2px;
-  border-right: #FF79DA solid 2px;
-  border-left: #ffdff6 solid 2px;
-  border-bottom: #ffdff6 solid 2px;
-  animation: spin 1000ms cubic-bezier(0.8, 0.8, 0.25, 0.94) 10 alternate;
-  transform: scale(0.8) rotate(0deg);
+  height: 150px;
+  width: 150px;
+  border: #FF79DA 2px solid;
+  animation-delay: 400ms;
 }
 
 @keyframes spin {
   to {
-    transform: scale(1.1) rotate(360deg);
+    transform: rotate3d(1, 1, 1, 360deg) scale(1);
+    opacity: 1;
   }
 }
 .loading-text {
-  position: fixed;
-  top: 48.5vh;
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 150px;
+  width: 150px;
+  position: absolute;
+  margin: auto;
+  background-color: transparent;
   font-family: "Shrikhand", cursive;
-  animation: fade 1000ms cubic-bezier(0.76, 0.79, 0.1, 0.98) 5 alternate;
+  animation: fade 1500ms 10 cubic-bezier(0.9, 0.9, 0.38, 1.01) alternate;
   transform: scale(1);
-  opacity: 0.3;
+  opacity: 0.6;
 }
 
 @keyframes fade {
   to {
-    opacity: 0.7;
     transform: scale(1.1);
+    opacity: 1;
   }
 }
 .btn {
