--- a/css/main.css
+++ b/css/main.css
@@ -336,6 +336,21 @@ h4 {
   padding: 10px;
   border-radius: 1rem;
   background-color: white;
+  animation: reveal 1000ms forwards;
+  transform: translateY(30px);
+  opacity: 0;
+}
+@keyframes reveal {
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+.dish:nth-child(2) {
+  animation-delay: 150ms;
+}
+.dish:nth-child(3) {
+  animation-delay: 300ms;
 }
 .dish__descr {
   font-weight: 300;
