--- a/sass/4_components/_dish.scss
+++ b/sass/4_components/_dish.scss
@@ -5,6 +5,24 @@
     padding: 10px;
     border-radius: $border-radius;
     background-color: white;
+    animation: reveal 1000ms forwards;
+    transform: translateY(30px);
+    opacity: 0;
+    
+    @keyframes reveal {
+        to {
+            transform: translateY(0);
+            opacity: 1;
+        }
+    }
+
+    &:nth-child(2) {
+        animation-delay: 150ms;
+    }
+
+    &:nth-child(3) {
+        animation-delay: 300ms;
+    }
 
     &__descr {
         font-weight: $light;
