--- a/css/main.css
+++ b/css/main.css
@@ -168,6 +168,28 @@ h4 {
   margin-right: 1em;
 }
 
+@keyframes hide {
+  to {
+    z-index: -1;
+    opacity: 0;
+  }
+}
+@keyframes spin {
+  30% {
+    border-radius: 50%;
+  }
+  100% {
+    border-radius: 0;
+    transform: rotate3d(0, 0, 0, 360deg) scale(1);
+    opacity: 1;
+  }
+}
+@keyframes heart-beat {
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
 .loader {
   flex-direction: column;
   display: flex;
@@ -188,12 +210,6 @@ h4 {
   animation-fill-mode: forwards;
 }
 
-@keyframes hide {
-  to {
-    z-index: -1;
-    opacity: 0;
-  }
-}
 .spinner {
   flex-direction: column;
   display: flex;
@@ -204,33 +220,28 @@ h4 {
 
 .spinner-primary, .spinner-secondary {
   position: absolute;
-  margin: 0 auto;
+  margin: auto;
   z-index: 2;
   border-radius: 50%;
-  transform: rotate3d(0, 0, 0, 180deg) scale(0.7);
-  animation: spin 1500ms 10 alternate;
-  opacity: 0.5;
+  opacity: 0.7;
+  animation: spin 1500ms 10 alternate cubic-bezier(0.21, 1, 0.13, 1.01);
 }
 
 .spinner-primary {
-  height: 190px;
-  width: 190px;
+  height: 150px;
+  width: 150px;
   border: #9356DC 2px solid;
+  transform: rotate3d(1, 1, 1, 360deg) scale(0.5);
 }
 
 .spinner-secondary {
-  height: 150px;
-  width: 150px;
+  height: 110px;
+  width: 110px;
   border: #FF79DA 2px solid;
-  animation-delay: 400ms;
+  transform: rotate3d(-1, -1, 1, 360deg) scale(0.5);
+  animation-delay: 200ms;
 }
 
-@keyframes spin {
-  to {
-    transform: rotate3d(1, 1, 1, 360deg) scale(1);
-    opacity: 1;
-  }
-}
 .loading-text {
   flex-direction: column;
   display: flex;
@@ -242,17 +253,11 @@ h4 {
   margin: auto;
   background-color: transparent;
   font-family: "Shrikhand", cursive;
-  animation: fade 1500ms 10 cubic-bezier(0.9, 0.9, 0.38, 1.01) alternate;
-  transform: scale(1);
-  opacity: 0.6;
+  animation: heart-beat 1500ms 10 cubic-bezier(0.21, 1, 0.13, 1.01) alternate;
+  transform: scale(0.9);
+  opacity: 0.4;
 }
 
-@keyframes fade {
-  to {
-    transform: scale(1.1);
-    opacity: 1;
-  }
-}
 .btn {
   padding: 1em;
   border: none;
